--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "repository": "https://github.com/stef-coenen/thebrownfox.git",
     "dependencies": {
         "bootstrap": "^4.0.0-alpha.6",
+        "gulp": "^3.9.1",
         "jquery": "^3.1.0",
         "npm": "^3.10.6"
     },
     "devDependencies": {
-        "babel-preset-env": "^1.6.0",
-        "es6-promise": "^4.1.1",
-        "gulp": "^3.9.1",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-env": "^1.6.1",
+        "express": "^4.16.2",
         "gulp-autoprefixer": "^4.0.0",
-        "gulp-babel": "^6.1.2",
+        "gulp-babel": "^7.0.0",
+        "gulp-clean-css": "^3.9.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-load-plugins": "^1.5.0",
         "gulp-nunjucks-render": "^2.2.1",
         "gulp-sass": "^3.1.0",
-        "gulp-sourcemaps": "^2.6.0",
-        "gulp-util": "^3.0.8",
-        "gulp-concat": "^2.6.1",
-        "gulp-uglify": "^3.0.0"
+        "gulp-sourcemaps": "^2.6.1",
+        "gulp-uglify": "^3.0.0",
+        "workbox-build": "^2.1.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
