--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "kinebeach-website",
+    "name": "thebrownfox",
     "version": "0.0.1",
-    "description": "kinebeach-website",
+    "description": "thebrownfox",
     "main": "index.html",
-    "repository": "https://github.com/stef-coenen/kinebeach.git",
+    "repository": "https://github.com/stef-coenen/thebrownfox",
     "dependencies": {
         "bootstrap": "^4.0.0-alpha.6",
         "gulp": "^3.9.1",
@@ -14,7 +14,9 @@
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
+        "browser-sync": "^2.24.7",
         "express": "^4.16.2",
+        "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
         "gulp-babel": "^7.0.0",
         "gulp-clean-css": "^3.9.0",
@@ -23,13 +25,18 @@
         "gulp-nunjucks-render": "^2.2.1",
         "gulp-sass": "^3.1.0",
         "gulp-sourcemaps": "^2.6.1",
-        "gulp-uglify": "^3.0.0",
+        "gulp-uglify-es": "^1.0.4",
         "workbox-build": "^2.1.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "keywords": ["Lube", "Front-End", "JavaScript", "jQuery"],
+    "keywords": [
+        "Lube",
+        "Front-End",
+        "JavaScript",
+        "jQuery"
+    ],
     "author": "Stef Coenen",
     "license": ""
 }
