--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.html",
     "repository": "https://github.com/stef-coenen/thebrownfox",
     "dependencies": {
-        "bootstrap": "^4.0.0-alpha.6",
+        "bootstrap": "^4.1.3",
         "gulp": "^3.9.1",
         "jquery": "^3.1.0",
         "npm": "^3.10.6"
@@ -17,16 +17,16 @@
         "browser-sync": "^2.24.7",
         "express": "^4.16.2",
         "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^4.0.0",
+        "gulp-autoprefixer": "^6.0.0",
         "gulp-babel": "^7.0.0",
-        "gulp-clean-css": "^3.9.0",
+        "gulp-clean-css": "^3.10.0",
         "gulp-concat": "^2.6.1",
         "gulp-load-plugins": "^1.5.0",
         "gulp-nunjucks-render": "^2.2.1",
-        "gulp-sass": "^3.1.0",
-        "gulp-sourcemaps": "^2.6.1",
+        "gulp-sass": "^4.0.2",
+        "gulp-sourcemaps": "^2.6.4",
         "gulp-uglify-es": "^1.0.4",
-        "workbox-build": "^2.1.0"
+        "workbox-build": "^3.6.3"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
